--- a/sass/content/_desktop.scss
+++ b/sass/content/_desktop.scss
@@ -10,8 +10,8 @@
     height: 4.3rem;
     margin: 56px auto 96px;
     margin: 5.6rem auto 9.6rem;
-    width: 210px;
-    width: 21rem;
+    width: 230px;
+    width: 23rem;
   }
   .standard-button:hover {
     background: #fff;
