--- a/sass/modal/_desktop.scss
+++ b/sass/modal/_desktop.scss
@@ -26,8 +26,8 @@
       color .25s ease-in;
     transition: background .25s ease-in,
       color .25s ease-in;
-    width: 197px;
-    width: 19.7rem;
+    width: 220px;
+    width: 22rem;
   }
   .modal__form--submit-btn:hover {
     background: #fff;
@@ -77,8 +77,8 @@
       color .25s ease-in;
     transition: background .25s ease-in,
       color .25s ease-in;
-    width: 197px;
-    width: 19.7rem;
+    width: 220px;
+    width: 22rem;
   }
   .standard-button:hover {
     background: #fff;
