--- a/sass/modal/_mobile.scss
+++ b/sass/modal/_mobile.scss
@@ -183,7 +183,6 @@
   }
 }
 .modal__form--required {
-  background: $cool-gray;
   color: $red;
   display: none;
   font-family: $bold-condensed;
